# tasksnap-desktop

./: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
.lovable/: plan.md
scripts/: set-version.cjs
src/: App.tsx  LoginApp.tsx  Waveform.tsx  auth.ts  index.css  main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/tasks/: AppShell.tsx  Onboarding.tsx  QuickAdd.tsx  Sidebar.tsx  TaskCard.tsx  TaskDetail.tsx  TaskList.tsx
src/integrations/supabase/: types.ts
src/lib/: notifications.ts  tasks.ts  theme.tsx  use-auth.ts
src/routes/: __root.tsx  all.tsx  auth.tsx  calendar.tsx  completed.tsx  index.tsx  upcoming.tsx
supabase/: config.toml
supabase/functions/capture-task/: index.ts
supabase/migrations/: 20260511112143_32a9f630-7d24-4e9c-b401-47ff9846e9dc.sql  20260511140423_6b6f8a15-e8cd-4e2e-a551-d5dd4d180e46.sql
tasksnap-ios/: project.yml  project.yml.save
tasksnap-ios/VocaFlow/: Info.plist  VocaFlow.entitlements
tasksnap-ios/VocaFlow.xcodeproj/: project.pbxproj
tasksnap-ios/VocaFlow/App/: AuthState.swift  RecordingTrigger.swift  VocaFlowApp.swift
tasksnap-ios/VocaFlow/Extensions/: Color+Hex.swift
tasksnap-ios/VocaFlowActivity/: Info.plist  RecordingLiveActivity.swift  VocaFlowActivityBundle.swift
tasksnap-ios/VocaFlowShared/: Package.swift
(+21 files in other folders)
